Remove `Arguments` from `CartesianArgumentsProvider` API (#523 / #528)
Jupiter's `Arguments` interface is used for parameterized tests, where each
`Arguments` instance corresponds to one test execution and thus carries an
`Object[]` with ine argument per parameter. A `CartesianArgumentsProvider`,
on the other hand, provides a set of arguments for a single parameter and
thus there's no need to wrap them in a container. They can simply return the
arguments directly.

As a welcome side effect, this change now allows passing a arrays to a
parameter without accidentally flattening it, which is what #523 was mainly
concerned with.

Closes: #523
PR: #528

--- a/docs/cartesian-product.adoc
+++ b/docs/cartesian-product.adoc
@@ -346,9 +346,9 @@ import org.junitpioneer.jupiter.cartesian.CartesianArgumentsProvider;
 class IntArgumentsProvider implements CartesianArgumentsProvider {
 
 	@Override
-	public Stream<? extends Arguments> provideArguments(ExtensionContext context, Parameter parameter) {
+	public Stream<Integer> provideArguments(ExtensionContext context, Parameter parameter) {
 		Ints source = Objects.requireNonNull(parameter.getAnnotation(Ints.class));
-		return Arrays.stream(source.value()).map(Arguments::of);
+		return Arrays.stream(source.value());
 	}
 
 }
@@ -386,11 +386,10 @@ import org.junitpioneer.jupiter.cartesian.CartesianArgumentsProvider;
 class PeopleProvider implements CartesianArgumentsProvider {
 
 	@Override
-public Stream<? extends Arguments> provideArguments(ExtensionContext context, Parameter parameter) {
+public Stream<Person> provideArguments(ExtensionContext context, Parameter parameter) {
 		People source = Objects.requireNonNull(parameter.getAnnotation(People.class));
 	return IntStream.range(0, source.names().length)
-		.mapToObj(i -> new Person(source.names()[i], source.ages()[i]))
-		.map(Arguments::of);
+		.mapToObj(i -> new Person(source.names()[i], source.ages()[i]));
 	}
 }
 ----
