--- a/docs/project-page.adoc
+++ b/docs/project-page.adoc
@@ -12,7 +12,7 @@ It offers https://junit-pioneer.org/docs/[a wide variety of extensions] and is c
 
 == Quick start
 
-Determine the latest version (e.g. on http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.junit-pioneer%22%20a%3A%22junit-pioneer%22"[Maven Central]) and add Pioneer as a test dependency.
+Determine the latest version (e.g. on https://search.maven.org/artifact/org.junit-pioneer/junit-pioneer[Maven Central]) and add Pioneer as a test dependency.
 
 Maven:
 
