Configure build and docs to compile and test code snippets (#335 / #334)
Code snippets in the documentation files in `docs` are just text and
thus run the risk of getting outdated when APIs evolve or
implementations change their behavior. To address that, we now use
Asciidoc's capability to include tagged regions from external
files[1] that are compiled and tested by the build. These files'
primary purpose is to demonstrate features (not to test them) and so
they are placed in a new source set `src/demojava`.

[1]: https://docs.asciidoctor.org/asciidoc/latest/directives/include-tagged-regions/

Related to junit-pioneer/junit-pioneer.github.io#33
Closes: #335
PR: #334

--- a/docs/report-entries.adoc
+++ b/docs/report-entries.adoc
@@ -1,5 +1,7 @@
 :page-title: Publishing Report Entries
 :page-description: Extends JUnit Jupiter with `@ReportEntry`, which publishes report entries using `TestReporter`.
+:xp-demo-dir: ../src/demo/java
+:demo: {xp-demo-dir}/org/junitpioneer/jupiter/ReportEntryExtensionDemo.java
 
 You can use `@ReportEntry` as a simple way to declaratively add metadata to test methods.
 
@@ -21,13 +23,9 @@ From the https://https://junit.org/junit5/docs/current/user-guide/#writing-tests
 
 So, you would use it like this:
 
-[source,java]
+[source,java,indent=0]
 ----
-@Test
-void reportingTest(TestReporter reporter) {
-	// YOUR TEST CODE HERE
-	reporter.publishEntry("Hello World!");
-}
+include::{demo}[tag=no_report_entry]
 ----
 
 You can have a look at https://junit.org/junit5/docs/current/api/org.junit.jupiter.api/org/junit/jupiter/api/TestReporter.html[the official documentation for more details].
@@ -42,13 +40,9 @@ This is what this extension is for!
 
 You can write...
 
-[source,java]
+[source,java,indent=0]
 ----
-@Test
-@ReportEntry("Hello World!")
-void reportingTest() {
-	// YOUR TEST CODE HERE
-}
+include::{demo}[tag=report_entry_basic]
 ----
 
 ...and the extension will publish your report entry for you after the test was executed!
@@ -57,28 +51,16 @@ void reportingTest() {
 
 You can declare multiple report entries on the same test (the annotation is repeatable).
 
-[source,java]
+[source,java,indent=0]
 ----
-@Test
-@ReportEntry("foo")
-@ReportEntry("bar")
-void reportingTest() {
-	// YOUR TEST CODE HERE
-}
+include::{demo}[tag=report_entry_multiple]
 ----
 
 Just like `TestReporter::publishEntry` accepts a single string as value or a key/value pair, `@ReportEntry` accepts either a single string as value or a key/value pair:
 
-[source,java]
+[source,java,indent=0]
 ----
-@Test
-@ReportEntry(key = "line1",
-		value = "Once upon a midnight dreary")
-@ReportEntry(key = "line2",
-		value = "While I pondered weak and weary")
-void edgarAllanPoe() {
-	// YOUR TEST CODE HERE
-}
+include::{demo}[tag=report_entry_with_key]
 ----
 
 Again, just like `TestReporter::publishEntry`, if no key is given it defaults to `"value"` (yes, that's not a mixup).
@@ -88,16 +70,9 @@ Again, just like `TestReporter::publishEntry`, if no key is given it defaults to
 You can specify a `PublishCondition` parameter on the `@ReportEntry` annotation for better control when the extension should publish your entry.
 Just so:
 
-[source,java]
+[source,java,indent=0]
 ----
-@Test
-@ReportEntry(
-	key = "line",
-	value = "success entry",
-	when = ReportEntry.PublishCondition.ON_SUCCESS)
-void sufferingFromSuccess() {
-	// YOUR TEST CODE HERE
-}
+include::{demo}[tag=report_entry_publish_condition]
 ----
 
 The publish condition must be a value of the `ReportEntry.PublishCondition` enum, which has the following values:
@@ -125,14 +100,9 @@ This works just like arguments in https://docs.oracle.com/javase/8/docs/api/java
 Inside the report entry, the parameters can be referenced in any order and multiple times.
 For example, if you have a `@ParameterizedTest` like the following:
 
-[source, java]
+[source,java,indent=0]
 ----
-@ParameterizedTest
-@CsvSource({"Hello, 21", "World, 42"})
-@ReportEntry("{1} - {0} - {1}")
-void test(String line, int number) {
-    // YOUR TEST CODE HERE
-}
+include::{demo}[tag=report_entry_for_params]
 ----
 Then the extension will publish `"21 - Hello - 21"` and `"42 - World - 42"`.
 
