--- a/docs/retrying-test.adoc
+++ b/docs/retrying-test.adoc
@@ -27,8 +27,19 @@ The default for `minSuccess` is 1. The value must be greater than or equal to 1.
 
 === onExceptions [optional]
 
-By default a test annotated with `@RetryingTest` will be retried on all exceptions except https://ota4j-team.github.io/opentest4j/docs/current/api/org/opentest4j/TestAbortedException.html[`TestAbortedException`] (which will abort the test entirely).
+By default, a test annotated with `@RetryingTest` will be retried on all exceptions except https://ota4j-team.github.io/opentest4j/docs/current/api/org/opentest4j/TestAbortedException.html[`TestAbortedException`] (which will abort the test entirely).
 To only retry on specific exceptions, use `onExceptions`.
+
+=== name [optional]
+
+The `name` attribute specifies the display name for the individual test invocations.
+(To give a custom name to your container, use `@DisplayName` on the test method.)
+The attribute value supports these variables:
+
+* `{index}`: will get replaced by the current invocation index
+* `{displayName}`: will get replaced by the test container display name
+
+The default for `name` is `[{index}]`.
 
 == Basic Use
 
