Align use of extension point (#479 / #496)
If an extension needs to search for enclosing elements, there are
basically two ways to do so: 

1. Combine `BeforeAllCallback`/`AfterAllCallback` with
   `BeforeEachCallback`/`AfterEachCallback`.
2. Use`BeforeEachCallback`/`AfterEachCallback` and look up enclosing
   elements (e.g. via
   `PioneerAnnotationUtils#findClosestEnclosingAnnotation(...)`).

We agreed on approach no. 2 since it appears to be less error-prone
and cover more common use cases.

This PR aligns the use of extension points to guarantee consistent
behavior across different extensions and documents our decision.

Closes: #479
PR: #496

--- a/docs/default-locale-timezone.adoc
+++ b/docs/default-locale-timezone.adoc
@@ -78,6 +78,8 @@ class MyLocaleTests {
 }
 ----
 
+NOTE: A class-level configuration means that the specified locale is set before and reset after each individual test in the annotated class.
+
 == `@DefaultTimeZone`
 
 The default `TimeZone` is specified according to the https://docs.oracle.com/javase/8/docs/api/java/util/TimeZone.html#getTimeZone(java.lang.String)[TimeZone.getTimeZone(String)] method.
@@ -120,6 +122,8 @@ class MyTimeZoneTests {
 	}
 }
 ----
+
+NOTE: A class-level configuration means that the specified time zone is set before and reset after each individual test in the annotated class.
 
 == Thread-Safety
 
