--- a/docs/default-locale-timezone.adoc
+++ b/docs/default-locale-timezone.adoc
@@ -2,7 +2,7 @@
 :page-description: Extends JUnit Jupiter with `@DefaultLocale`, `@DefaultTimeZone`, which change the values returned from Locale.getDefault() and TimeZone.getDefault()
 
 The `@DefaultLocale` and `@DefaultTimeZone` annotations can be used to change the values returned from `Locale.getDefault()` and `TimeZone.getDefault()`.
-Both annotations work on the test class level and on the test method level.
+Both annotations work on the test class level and on the test method level, and are inherited from higher-level containers.
 After the annotated element has been executed the initial default value is restored.
 
 == `@DefaultLocale`
