--- a/docs/environment-variables.adoc
+++ b/docs/environment-variables.adoc
@@ -2,7 +2,7 @@
 :page-description: Extends JUnit Jupiter with `@ClearEnvironmentVariable`, `@SetEnvironmentVariable`, which clear and set the values of environment variables
 
 The `@ClearEnvironmentVariable` and `@SetEnvironmentVariable` annotations can be used to clear, respectively, set the values of environment variables for a test execution.
-Both annotations work on the test method and class level, are repeatable as well as combinable.
+Both annotations work on the test method and class level, are repeatable, combinable, and inherited from higher-level containers.
 After the annotated method has been executed, the variables mentioned in the annotation will be restored to their original value or will be cleared if they didn't have one before.
 Other environment variables that are changed during the test, are *not* restored.
 
