--- a/docs/system-properties.adoc
+++ b/docs/system-properties.adoc
@@ -2,7 +2,7 @@
 :page-description: Extends JUnit Jupiter with `@ClearSystemProperty`, `@SetSystemProperty`, which clear and set the values of system properties
 
 The `@ClearSystemProperty` and `@SetSystemProperty` annotations can be used to clear, respectively, set the values of system properties for a test execution.
-Both annotations work on the test method and class level, are repeatable as well as combinable.
+Both annotations work on the test method and class level, are repeatable, combinable, and inherited from higher-level containers.
 After the annotated method has been executed, the properties mentioned in the annotation will be restored to their original value or will be cleared if they didn't have one before.
 Other system properties that are changed during the test, are *not* restored.
 
